2004-10-20  Shaun McCance  <shaunm@gnome.org>

	* data/icons/Makefile.am:
	* data/yelp-icon-caution.png:
	* data/yelp-icon-important.png:
	* data/yelp-icon-note.png:
	* data/yelp-icon-tip.png:
	* data/yelp-icon-warning.png:
	* data/yelp-watermark-blockquote-00AB.png:
	* data/yelp-watermark-blockquote-00BB.png:
	* data/yelp-watermark-blockquote-201C.png:
	* data/yelp-watermark-blockquote-201E.png:
	* src/yelp-db-pager.c:
	* src/yelp-settings.c:
	* src/yelp-settings.h:
	* stylesheets/db2html.xsl.in:
	- Themeable icons and watermarks

	* src/yelp-gecko-utils.cpp:
	* src/yelp-gecko-utils.h:
	* src/yelp-html-gecko.c:
	* src/yelp-html.h:
	* src/yelp-settings.c:
	* src/yelp-settings.h:
	- Color settings

	* src/yelp-utils.c:
	- Fixed a very stupid crasher

	* src/yelp-window.c:
	- Pop the history stack on errors

2004-10-19  James Bowes  <bowes@cs.dal.ca>

	* src/yelp-man-parser.c: (yelp_man_parser_parse_file),
	(parser_handle_linetag), (parser_handle_inline): Add more tags 
	to the parser, including the inline comment tag, some bsd mandoc 
	macros, and hypertext macros.

2004-10-18  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	- Declare i at top of db_pager_process

2004-10-18  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	* src/yelp-main.c:
	* src/yelp-window.c:
	- Using gtk_window_set_default_icon_name
	- Using GtkAboutDialog

2004-10-18  Shaun McCance  <shaunm@gnome.org>

	* data/yelp.schemas.in:
	- Forgot to add this to CVS

2004-10-18  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-man-parser.c:
	- Small fix for TP tag from Don Scorgie

2004-10-18  Shaun McCance  <shaunm@gnome.org>

	* src/Makefile.am:
	* src/yelp-gecko-utils.cpp:
	* src/yelp-gecko-utils.h:
	* src/yelp-html-gecko.c:
	* src/yelp-html.h:
	* src/yelp-window.c:
	- Patch from Don Scorgie to make Copy work.  Yay!

2004-10-18  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	- Minor changes

	* data/default.css:
	- Some CSS changes

	* data/Makefile.am:
	* data/ui/yelp-ui.xml: