@@ -1,5 +1,10 @@
 2004-10-20  Shaun McCance  <shaunm@gnome.org>
 
+	* stylesheets/db2html.xsl.in:
+	- Actually select the variable for admon graphics
+
+2004-10-20  Shaun McCance  <shaunm@gnome.org>
+
 	* data/icons/Makefile.am:
 	* data/yelp-icon-caution.png:
 	* data/yelp-icon-important.png:
